--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/three": "^0.181.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.23.25",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.468.0",
     "next": "14.2.23",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "prettier": "^3.3.3",
     "radix-ui": "^1.1.3",
@@ -35,8 +40,10 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-qr-code": "^2.0.18",
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
+    "three": "^0.181.2",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
