--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.468.0",
     "next": "14.2.23",
     "next-auth": "^4.24.7",
